methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: illegal start of simple pattern
  for (case<- 1 to 6) {
       ^MethodsReturning:12: error: '<-' expected but '}' found.
} 
^